# trellis

./: Cargo.toml
dot_parser/: Cargo.toml
dot_parser/src/: lexer.rs  lib.rs
src/: disjoint.rs  error.rs  graph.rs  layering.rs  lib.rs  ramp_table.rs  testing.rs  topo_sort.rs  vec_option.rs
trellis/: Cargo.toml
trellis/src/: find_chains.rs  graph.rs  iters.rs  layering.rs  lib.rs  math.rs  polyline.rs  priority_queue.rs  ramp_table.rs  testing.rs  topo_sort.rs  vec2.rs  vec_option.rs
trellis/src/cgraph/: mod.rs
trellis/src/common/: arith.rs  color.rs  colxlate.rs  ellipse.rs  geom.rs  mod.rs
trellis/src/dot_parser/: mod.rs
trellis/src/gvc/: ellipse.rs  mod.rs
trellis/src/ortho/: fpq.rs  mod.rs  sgraph.rs  shortest_path.rs  structures.rs
trellis/src/pathplan/: array2.rs  cvt.rs  in_poly.rs  mod.rs  route.rs  shortest.rs  shortestpth.rs  solvers.rs  triang.rs  vis.rs  visibility.rs
trellis_view_wasm/: Cargo.toml  go  go.cmd
trellis_view_wasm/src/: lib.rs
trellis_view_wasm/web/: index.html  trellis_view.js
