[package]
name = "trellis"
version = "0.1.0"
authors = ["Arlie Davis <arlie.davis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
env_logger = "0.6"
bit-vec = "0.1"

[dev-dependencies]
# env_logger = "0.6"
